[package]
name = "h3o"
version = "0.1.0"
authors = ["Sylvain Laperche <sylvain.laperche@gmail.com>"]
edition = "2021"
description = "A Rust implementation of the H3 geospatial indexing system."
documentation = "https://docs.rs/h3o/"
readme = "README.md"
homepage = "https://docs.rs/h3o"
repository = "https://github.com/HydroniumLabs/h3o"
license = "BSD-3-Clause"
keywords = ["geography", "geospatial", "gis", "h3", "spatial-index"]
categories = ["science"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
geo = ["dep:geo", "dep:geojson"]

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["std", "runtime-rng"] }
auto_ops = { version = "0.3", default-features = false }
either = { version = "1.0", default-features = false }
float_eq = { version = "1.0", default-features = false }
geo = { version = "0.23", optional = true, default-features = false }
geojson = { version = "0.24", optional = true, default-features = false, features = ["geo-types"] }

[dev-dependencies]
approx = { version = "0.5", default-features = false }
criterion = { version = "0.4", default-features = false, features = ["plotters", "cargo_bench_support", "html_reports"] }
h3ron-h3-sys = { version = "0.15", default-features = false }

[lib]
# doctests are good for docs, but unfortunately they are slow.
# Cf. https://matklad.github.io/2021/02/27/delete-cargo-integration-tests.html
doctest = false

[[bench]]
harness = false
name = "h3"
